# wheeloftime-compendium-app

./: .gitignore  pyproject.toml  to_dict.py
.github/workflows/: build_dicts.yml  main.yml
