[project]
name = "wheeloftime-compendium-app"
version = "0.1.0"
description = "generate dictionaries using pyglossary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3.0",
    "pyglossary",
    "python-idzip>=0.3.9",
    "ruff>=0.6.9",
    "mypy>=1.10",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "RUF", "UP", "B", "PL", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "pyglossary.*"
ignore_missing_imports = true
